istio-ingressgateway/nginx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: default
spec:
  hosts:
  - web.istio.cjkj.co
  gateways:
  - nginx-https-gateway
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 443
        subset: https
      weight: 100
